<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mocap_to_vision_pose_ros2</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="charbel.toumieh@epfl.ch">toumieh</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>
  <depend>builtin_interfaces</depend>
  <depend>geographic_msgs</depend>
  <depend>mavros_msgs</depend>
  <depend>optitrack_multiplexer_ros2_msgs</depend>

  <exec_depend>rclpy</exec_depend>

  <buildtool_depend>ament_python</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
